--- a/app/views/cocktails/index.html.erb
+++ b/app/views/cocktails/index.html.erb
@@ -1,6 +1,16 @@
 <h1>Cocktails</h1>
 
+<h2>
+ <button>
+  <%= link_to "Add Cocktail", new_cocktail_path %>
+</button>
+</h2>
+
 <h3>
+  All your cocktails:
+</h3>
+
+<p>
   <ul>
     <% @cocktails.each do |cocktail| %>
       <li>
@@ -8,4 +18,4 @@
       </li>
     <% end %>
   </ul>
-</h3>
+</p>
