--- a/app/views/cocktails/show.html.erb
+++ b/app/views/cocktails/show.html.erb
@@ -1,2 +1,14 @@
 <h1> <%= @cocktail.name %> </h1>
 
+<%= link_to "Add a new dose", new_cocktail_dose_path(@cocktail), class: "btn btn-primary" %>
+
+<br>
+
+<% @cocktail.doses.each do |dose| %>
+  <%= "#{dose.description} of #{dose.ingredient.name}" %>
+  <%= link_to "Destroy dose", destroy_dose_path(dose),
+      method: :delete,
+      data: { confirm: "Are you sure ?" } %>
+  <br>
+<% end %>
+
