--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -13,3 +13,20 @@
 @import "layouts/index";
 @import "components/index";
 @import "pages/index";
+
+
+
+
+img {
+  width: 200px;
+  height: 200px;
+}
+
+
+
+
+.row_cocktails {
+  display: flex;
+  padding-top: 20px;
+  padding-bottom: 15px;
+}
