--- a/app/views/cocktails/index.html.erb
+++ b/app/views/cocktails/index.html.erb
@@ -1,21 +1,24 @@
-<h1>Cocktails</h1>
+<div class="banner" style="background-image: linear-gradient(-225deg, rgba(0,101,168,0.6) 0%, rgba(0,36,61,0.6) 50%), url('https://www.halfbakedharvest.com/wp-content/uploads/2016/06/Summertime-Rose-Tequila-Sangria-1.jpg');">
+  <div class="banner-content">
+    <h1>Cocktail Boss Milano</h1>
+    <p>Browse hundreds of cocktails and add your own!</p>
 
-<h2>
- <button>
-  <%= link_to "Add Cocktail", new_cocktail_path %>
-</button>
-</h2>
+    <h2><button>
+      <%= link_to "Add Cocktail", new_cocktail_path %>
+    </button></h2>
 
-<h3>
-  All your cocktails:
-</h3>
+  </div>
+</div>
 
-<p>
-  <ul>
+<div class="container">
+  <div class="row_cocktails">
     <% @cocktails.each do |cocktail| %>
-      <li>
-        <%= link_to cocktail.name, cocktail_path(cocktail) %>
-      </li>
+      <div class="card" style="width: 18rem;">
+        <img class="card-img-top" src=<%= cocktail.image %> alt="Card image cap">
+            <div class="card-body">
+              <h5 class="card-title"> <%= link_to cocktail.name, cocktail_path(cocktail) %></h5>
+            </div>
+      </div>
     <% end %>
-  </ul>
-</p>
+  </div>
+</div>
